--- a/api/package.json
+++ b/api/package.json
@@ -5,9 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
     "start:prod": "node build/app.js",
-    "start:dev": "nodemon src/app.ts"
+    "start:dev": "nodemon -r dotenv/config src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -16,15 +15,14 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "i18n": "^0.15.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.25.8"
+    "node-fetch": "2.6.1",
+    "sequelize": "^6.25.8",
+    "url": "^0.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@types/mysql": "^2.15.21",
-    "@types/sequelize": "^4.28.14",
     "nodemon": "^2.0.20",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "sequelize-cli": "^6.5.2"
   }
 }
