Updates for env

--- a/api/.sample.env
+++ b/api/.sample.env
@@ -8,6 +8,9 @@ PAGE_ID=
 APP_ID=
 PAGE_ACCESS_TOKEN=
 
+# Long-lived user access token can last for 60 days (Generated on 29 Nov)
+USER_ACCESS_TOKEN=
+
 # Your App secret can be found in App Dashboard -> Settings -> Basic
 APP_SECRET=
 
@@ -19,11 +22,11 @@ VERIFY_TOKEN=
 # It must be https, and without trailing slash.
 APP_URL=
 
-# URL of your website where the "shop now" is located
-# Can be the same as your app domain URL ex: https://www.originalcoastclothing.com/
-SHOP_URL=
-
 # Preferred port
-PORT=3000
+PORT=
 
+NODE_ENV=
+
+MAILGUN_API_TOKEN=
+MAILGUN_DOMAIN=
 # Note: .env is a shell file so there can't be spaces around =
