--- a/api/package.json
+++ b/api/package.json
@@ -15,7 +15,7 @@
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "i18n": "^0.15.1",
+    "mailgun-js": "^0.22.0",
     "mysql2": "^2.3.3",
     "node-fetch": "2.6.1",
     "sequelize": "^6.25.8",
